--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,45 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+@layer base {
+  #root {
+    @apply flex flex-col min-h-screen;
+  }
+
+  main {
+    @apply flex-grow;
+  }
+
+  h1 {
+    @apply text-6xl;
+  }
+
+  h2 {
+    @apply text-4xl;
+  }
+
+  h3 {
+    @apply text-2xl;
+  }
+
+  h4 {
+    @apply text-xl;
+  }
+
+  body {
+    @apply text-base;
+  }
+
+  small {
+    @apply text-xs;
+  }
+
+  p {
+    @apply text-base;
+  }
+
+  .content-padding {
+    @apply mx-auto max-w-[theme('screens.lg')] px-4 md:px-6 lg:px-8;
+  }
+}
